monitoring/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.yourdomain.com
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.yourdomain.com
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus-service
          servicePort: 8080
  - host: alertmanager.yourdomain.com
    http:
      paths:
      - path: /alertmanager
        backend:
          serviceName: alertmanager
          servicePort: 9093
